[package]
name = "ccxt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
num-bigint = { version = "0.4.3", features = ["serde"] }
num-integer = "0.1.45"
num-traits = "0.2.15"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.83"

[lib]
name = "rust"
path = "src/lib.rs"
